--- a/hello.css
+++ b/hello.css
@@ -4,6 +4,9 @@
     /* background-color: aqua; */
     text-align: center;
 }
+body{
+background-color: aqua;
+}
 .comm{
     position: relative;
 display: flex;
@@ -12,6 +15,8 @@ width: 700px;
 height: 500px;
 margin-left: 350px;
 margin-top: 150px;
+background-color: white;
+
 }
 .comm div{
     /* padding: 10px; */
